Refactor controllers to use `AlertaMapper` for response transformation and improve error handling.
- Introduced `AlertaMapper` for consistent DTO mapping across controllers.
- Replaced manual DTO conversions with `AlertaMapper` in `AlertaController`.
- Added `CambioEstadoRequest` and `DashboardStatsDto` DTOs for better request/response structure.
- Implemented `GlobalExceptionHandler` for centralized error handling.
- Simplified `AlertaController` methods by removing redundant try-catch blocks.
- Removed unused `@CrossOrigin` in `AlertaInformeController`.
- Enhanced `getAlertasStats` with streamlined DTO-based statistics generation.