@@ -5,10 +5,13 @@ import cl.seguridad.vecinal.dao.AlertaRepository;
 import cl.seguridad.vecinal.dao.UsuarioRepository;
 import cl.seguridad.vecinal.modelo.*;
 import cl.seguridad.vecinal.modelo.dto.AlertaCreateRequest;
+import cl.seguridad.vecinal.modelo.dto.CambioEstadoRequest;
+import cl.seguridad.vecinal.modelo.dto.DashboardStatsDto;
 import cl.seguridad.vecinal.modelo.dto.AlertaResponseDto;
+import cl.seguridad.vecinal.modelo.mapper.AlertaMapper;
 import cl.seguridad.vecinal.service.AlertaService;
+import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -19,49 +22,49 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/alertas")
-@CrossOrigin(origins = {"http://localhost:3000", "http://localhost:3001"})
 public class AlertaController {
 
-    @Autowired
-    private AlertaService alertaService;
+    // Constants to avoid literal duplication
+    private static final String FIELD_FECHA_HORA = "fechaHora";
+    private static final String KEY_ALERTAS = "alertas";
+    private static final String KEY_ALERTA = "alerta";
+    private static final String KEY_STATUS = "status";
+    private static final String KEY_MESSAGE = "message";
+    private static final String KEY_TOTAL = "total";
+    private static final String KEY_TOTAL_ELEMENTS = "totalElements";
+    private static final String KEY_TOTAL_PAGES = "totalPages";
+    private static final String KEY_CURRENT_PAGE = "currentPage";
+    private static final String VALUE_SUCCESS = "success";
 
-    @Autowired
-    private AlertaRepository alertaRepository;
+    private final AlertaService alertaService;
+    private final AlertaRepository alertaRepository;
+    private final UsuarioRepository usuarioRepository;
+    private final AlertaMapper alertaMapper;
 
-    @Autowired
-    private UsuarioRepository usuarioRepository;
+    // Constructor injection for dependencies
+    public AlertaController(AlertaService alertaService,
+                            AlertaRepository alertaRepository,
+                            UsuarioRepository usuarioRepository,
+                            AlertaMapper alertaMapper) {
+        this.alertaService = alertaService;
+        this.alertaRepository = alertaRepository;
+        this.usuarioRepository = usuarioRepository;
+        this.alertaMapper = alertaMapper;
+    }
 
     // ========== CREAR ALERTA ==========
     @PostMapping("/crear")
     public ResponseEntity<Map<String, Object>> crearAlerta(@Valid @RequestBody AlertaCreateRequest request) {
-        try {
-            Alerta nuevaAlerta = alertaService.crearAlerta(request);
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alerta", new AlertaResponseDto(nuevaAlerta));
-            response.put("status", "success");
-            response.put("message", "Alerta creada exitosamente");
-
-            return ResponseEntity.status(HttpStatus.CREATED).body(response);
-
-        } catch (RuntimeException e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", e.getMessage());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error interno del servidor: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        Alerta nuevaAlerta = alertaService.crearAlerta(request);
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTA, alertaMapper.toDto(nuevaAlerta));
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        response.put(KEY_MESSAGE, "Alerta creada exitosamente");
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     // ========== OBTENER TODAS LAS ALERTAS (CON PAGINACIÓN) ==========
@@ -69,111 +72,56 @@ public class AlertaController {
     public ResponseEntity<Map<String, Object>> obtenerAlertasPaginadas(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "20") int size,
-            @RequestParam(defaultValue = "fechaHora") String sortBy,
+            @RequestParam(defaultValue = FIELD_FECHA_HORA) String sortBy,
             @RequestParam(defaultValue = "desc") String sortDir) {
 
-        try {
-            Sort sort = sortDir.equals("desc") ? Sort.by(sortBy).descending() : Sort.by(sortBy).ascending();
-            Pageable pageable = PageRequest.of(page, size, sort);
-
-            Page<Alerta> alertaPage = alertaService.obtenerAlertasPaginadas(pageable);
-
-            List<AlertaResponseDto> alertas = alertaPage.getContent().stream()
-                    .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertas);
-            response.put("currentPage", alertaPage.getNumber());
-            response.put("totalPages", alertaPage.getTotalPages());
-            response.put("totalElements", alertaPage.getTotalElements());
-            response.put("size", alertaPage.getSize());
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        Sort sort = sortDir.equals("desc") ? Sort.by(sortBy).descending() : Sort.by(sortBy).ascending();
+        Pageable pageable = PageRequest.of(page, size, sort);
+        Page<Alerta> alertaPage = alertaService.obtenerAlertasPaginadas(pageable);
+        List<AlertaResponseDto> alertas = alertaMapper.toDtoList(alertaPage.getContent());
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTAS, alertas);
+        response.put(KEY_CURRENT_PAGE, alertaPage.getNumber());
+        response.put(KEY_TOTAL_PAGES, alertaPage.getTotalPages());
+        response.put(KEY_TOTAL_ELEMENTS, alertaPage.getTotalElements());
+        response.put("size", alertaPage.getSize());
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== OBTENER ALERTA POR ID ==========
     @GetMapping("/{id}")
     public ResponseEntity<Map<String, Object>> obtenerAlertaPorId(@PathVariable Integer id) {
-        try {
-            Optional<Alerta> alerta = alertaService.obtenerAlertaPorId(id);
-
-            if (alerta.isPresent()) {
-                Map<String, Object> response = new HashMap<>();
-                response.put("alerta", new AlertaResponseDto(alerta.get()));
-                response.put("status", "success");
-                return ResponseEntity.ok(response);
-            } else {
-                Map<String, Object> error = new HashMap<>();
-                error.put("status", "error");
-                error.put("message", "Alerta no encontrada");
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
-            }
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alerta: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        Optional<Alerta> alerta = alertaService.obtenerAlertaPorId(id);
+        Alerta entity = alerta.orElseThrow(() -> new EntityNotFoundException("Alerta no encontrada"));
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTA, alertaMapper.toDto(entity));
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== OBTENER ALERTAS ACTIVAS ==========
     @GetMapping("/activas")
     public ResponseEntity<Map<String, Object>> obtenerAlertasActivas() {
-        try {
-            List<Alerta> alertas = alertaService.obtenerAlertasActivas();
-
-            List<AlertaResponseDto> alertasDto = alertas.stream()
-                    .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertasDto);
-            response.put("total", alertasDto.size());
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas activas: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        List<Alerta> alertas = alertaService.obtenerAlertasActivas();
+        List<AlertaResponseDto> alertasDto = alertaMapper.toDtoList(alertas);
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTAS, alertasDto);
+        response.put(KEY_TOTAL, alertasDto.size());
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== OBTENER ALERTAS RECIENTES (ÚLTIMAS 24 HORAS) ==========
     @GetMapping("/recientes")
     public ResponseEntity<Map<String, Object>> obtenerAlertasRecientes() {
-        try {
-            List<Alerta> alertas = alertaService.obtenerAlertasRecientes();
-
-            List<AlertaResponseDto> alertasDto = alertas.stream()
-                    .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertasDto);
-            response.put("total", alertasDto.size());
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas recientes: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        List<Alerta> alertas = alertaService.obtenerAlertasRecientes();
+        List<AlertaResponseDto> alertasDto = alertaMapper.toDtoList(alertas);
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTAS, alertasDto);
+        response.put(KEY_TOTAL, alertasDto.size());
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== OBTENER ALERTAS POR USUARIO ==========
@@ -183,29 +131,16 @@ public class AlertaController {
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "20") int size) {
 
-        try {
-            Pageable pageable = PageRequest.of(page, size, Sort.by("fechaHora").descending());
-            Page<Alerta> alertaPage = alertaService.obtenerAlertasPorUsuario(usuarioId, pageable);
-
-            List<AlertaResponseDto> alertas = alertaPage.getContent().stream()
-                    .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertas);
-            response.put("currentPage", alertaPage.getNumber());
-            response.put("totalPages", alertaPage.getTotalPages());
-            response.put("totalElements", alertaPage.getTotalElements());
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas del usuario: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        Pageable pageable = PageRequest.of(page, size, Sort.by(FIELD_FECHA_HORA).descending());
+        Page<Alerta> alertaPage = alertaService.obtenerAlertasPorUsuario(usuarioId, pageable);
+        List<AlertaResponseDto> alertas = alertaMapper.toDtoList(alertaPage.getContent());
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTAS, alertas);
+        response.put(KEY_CURRENT_PAGE, alertaPage.getNumber());
+        response.put(KEY_TOTAL_PAGES, alertaPage.getTotalPages());
+        response.put(KEY_TOTAL_ELEMENTS, alertaPage.getTotalElements());
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== OBTENER ALERTAS POR ESTADO ==========
@@ -217,31 +152,31 @@ public class AlertaController {
 
         try {
             EstadoAlerta estadoAlerta = EstadoAlerta.valueOf(estado.toUpperCase());
-            Pageable pageable = PageRequest.of(page, size, Sort.by("fechaHora").descending());
+            Pageable pageable = PageRequest.of(page, size, Sort.by(FIELD_FECHA_HORA).descending());
             Page<Alerta> alertaPage = alertaService.obtenerAlertasPorEstado(estadoAlerta, pageable);
 
             List<AlertaResponseDto> alertas = alertaPage.getContent().stream()
                     .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertas);
-            response.put("currentPage", alertaPage.getNumber());
-            response.put("totalPages", alertaPage.getTotalPages());
-            response.put("totalElements", alertaPage.getTotalElements());
-            response.put("status", "success");
+            response.put(KEY_ALERTAS, alertas);
+            response.put(KEY_CURRENT_PAGE, alertaPage.getNumber());
+            response.put(KEY_TOTAL_PAGES, alertaPage.getTotalPages());
+            response.put(KEY_TOTAL_ELEMENTS, alertaPage.getTotalElements());
+            response.put(KEY_STATUS, VALUE_SUCCESS);
 
             return ResponseEntity.ok(response);
 
         } catch (IllegalArgumentException e) {
             Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Estado inválido");
+            error.put(KEY_STATUS, "error");
+            error.put(KEY_MESSAGE, "Estado inválido");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
         } catch (Exception e) {
             Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas por estado: " + e.getMessage());
+            error.put(KEY_STATUS, "error");
+            error.put(KEY_MESSAGE, "Error al obtener alertas por estado: " + e.getMessage());
             return ResponseEntity.internalServerError().body(error);
         }
     }
@@ -253,134 +188,63 @@ public class AlertaController {
             @RequestParam Double longitud,
             @RequestParam(defaultValue = "5.0") Double radio) {
 
-        try {
-            List<Alerta> alertas = alertaService.obtenerAlertasCercanas(latitud, longitud, radio);
-
-            List<AlertaResponseDto> alertasDto = alertas.stream()
-                    .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertasDto);
-            response.put("total", alertasDto.size());
-            response.put("radio", radio + " km");
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas cercanas: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        List<Alerta> alertas = alertaService.obtenerAlertasCercanas(latitud, longitud, radio);
+        List<AlertaResponseDto> alertasDto = alertaMapper.toDtoList(alertas);
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTAS, alertasDto);
+        response.put(KEY_TOTAL, alertasDto.size());
+        response.put("radio", radio + " km");
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== CAMBIAR ESTADO DE ALERTA ==========
     @PutMapping("/{id}/estado")
     public ResponseEntity<Map<String, Object>> cambiarEstadoAlerta(
             @PathVariable Integer id,
-            @RequestBody Map<String, Object> request) {
+            @RequestBody CambioEstadoRequest request) {
 
-        try {
-            String estadoStr = (String) request.get("estado");
-            Integer adminId = (Integer) request.get("adminId");
-            String notas = (String) request.get("notas");
-
-            EstadoAlerta nuevoEstado = EstadoAlerta.valueOf(estadoStr.toUpperCase());
-
-            Alerta alerta = alertaService.cambiarEstadoAlerta(id, nuevoEstado, adminId, notas);
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alerta", new AlertaResponseDto(alerta));
-            response.put("status", "success");
-            response.put("message", "Estado de alerta actualizado");
-
-            return ResponseEntity.ok(response);
-
-        } catch (IllegalArgumentException e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Estado inválido");
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
-        } catch (RuntimeException e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
-        }
+        EstadoAlerta nuevoEstado = EstadoAlerta.valueOf(request.getEstado().toUpperCase());
+        Alerta alerta = alertaService.cambiarEstadoAlerta(id, nuevoEstado, request.getAdminId(), request.getNotas());
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTA, alertaMapper.toDto(alerta));
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        response.put(KEY_MESSAGE, "Estado de alerta actualizado");
+        return ResponseEntity.ok(response);
     }
 
     // ========== OBTENER ESTADÍSTICAS ==========
     @GetMapping("/estadisticas")
     public ResponseEntity<Map<String, Object>> obtenerEstadisticas() {
-        try {
-            AlertaService.AlertaStats stats = alertaService.obtenerEstadisticas();
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("total", stats.total);
-            response.put("activas", stats.activas);
-            response.put("enProceso", stats.enProceso);
-            response.put("resueltas", stats.resueltas);
-            response.put("hoy", stats.hoy);
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener estadísticas: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        AlertaService.AlertaStats stats = alertaService.obtenerEstadisticas();
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_TOTAL, stats.total);
+        response.put("activas", stats.activas);
+        response.put("enProceso", stats.enProceso);
+        response.put("resueltas", stats.resueltas);
+        response.put("hoy", stats.hoy);
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== ELIMINAR ALERTA ==========
     @DeleteMapping("/{id}")
     public ResponseEntity<Map<String, Object>> eliminarAlerta(@PathVariable Integer id) {
-        try {
-            alertaService.eliminarAlerta(id);
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("status", "success");
-            response.put("message", "Alerta eliminada exitosamente");
-
-            return ResponseEntity.ok(response);
-
-        } catch (RuntimeException e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
-        }
+        alertaService.eliminarAlerta(id);
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        response.put(KEY_MESSAGE, "Alerta eliminada exitosamente");
+        return ResponseEntity.ok(response);
     }
 
     // ========== OBTENER TIPOS DE ALERTA DISPONIBLES ==========
     @GetMapping("/tipos")
     public ResponseEntity<Map<String, Object>> obtenerTiposAlerta() {
-        try {
-            List<Map<String, String>> tipos = new ArrayList<>();
-
-            for (TipoAlertaEnum tipo : TipoAlertaEnum.values()) {
-                Map<String, String> tipoInfo = new HashMap<>();
-                tipoInfo.put("value", tipo.name());
-                tipoInfo.put("titulo", tipo.getTitulo());
-                tipoInfo.put("descripcion", tipo.getDescripcion());
-                tipos.add(tipoInfo);
-            }
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("tipos", tipos);
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener tipos de alerta: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        List<Map<String, String>> tipos = TipoAlertaEnum.asListOfMaps();
+        Map<String, Object> response = new HashMap<>();
+        response.put("tipos", tipos);
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // OBTENER ALERTAS POR SECTOR
@@ -390,169 +254,32 @@ public class AlertaController {
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "20") int size) {
 
-        try {
-            Sort sort = Sort.by("fechaHora").descending();
-            Pageable pageable = PageRequest.of(page, size, sort);
-
-            Page<Alerta> alertaPage = alertaRepository.findBySector(sector, pageable);
-
-            List<AlertaResponseDto> alertas = alertaPage.getContent().stream()
-                    .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertas);
-            response.put("currentPage", alertaPage.getNumber());
-            response.put("totalPages", alertaPage.getTotalPages());
-            response.put("totalElements", alertaPage.getTotalElements());
-            response.put("sector", sector);
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas del sector: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        Sort sort = Sort.by(FIELD_FECHA_HORA).descending();
+        Pageable pageable = PageRequest.of(page, size, sort);
+        Page<Alerta> alertaPage = alertaRepository.findBySector(sector, pageable);
+        List<AlertaResponseDto> alertas = alertaMapper.toDtoList(alertaPage.getContent());
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTAS, alertas);
+        response.put(KEY_CURRENT_PAGE, alertaPage.getNumber());
+        response.put(KEY_TOTAL_PAGES, alertaPage.getTotalPages());
+        response.put(KEY_TOTAL_ELEMENTS, alertaPage.getTotalElements());
+        response.put("sector", sector);
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 
     // ========== ESTADÍSTICAS DE ALERTAS (PARA DASHBOARD) ==========
 
     @GetMapping("/stats")
-    public ResponseEntity<Map<String, Object>> getAlertasStats(
+    public ResponseEntity<DashboardStatsDto> getAlertasStats(
             @RequestParam(required = false) Long villaId,
             @RequestParam(required = false) String sector,
             @RequestParam(required = false) String fechaInicio,
             @RequestParam(required = false) String fechaFin) {
-
-        try {
-            // Obtener usuario actual
-            Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-            String email = auth.getName();
-            Usuario currentUser = usuarioRepository.findByEmail(email)
-                    .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-
-            // Determinar villaId según el rol
-            Long targetVillaId = null;
-            if (currentUser.getRole() == Role.ADMIN_VILLA) {
-                // ADMIN_VILLA solo puede ver stats de su villa
-                targetVillaId = currentUser.getVillaId();
-            } else if (currentUser.getRole() == Role.SUPER_ADMIN) {
-                // SUPER_ADMIN puede filtrar por villa o ver todo
-                targetVillaId = villaId;
-            }
-
-            // Parsear fechas
-            LocalDateTime startDate = fechaInicio != null ?
-                    LocalDateTime.parse(fechaInicio + "T00:00:00") :
-                    LocalDateTime.now().minusMonths(1); // Por defecto último mes
-
-            LocalDateTime endDate = fechaFin != null ?
-                    LocalDateTime.parse(fechaFin + "T23:59:59") :
-                    LocalDateTime.now();
-
-            // Obtener alertas filtradas
-            List<Alerta> alertas;
-            if (targetVillaId != null && sector != null) {
-                alertas = alertaRepository.findByVillaIdAndSectorAndFechaHoraBetween(
-                        targetVillaId, sector, startDate, endDate);
-            } else if (targetVillaId != null) {
-                alertas = alertaRepository.findByVillaIdAndFechaHoraBetween(
-                        targetVillaId, startDate, endDate);
-            } else if (sector != null) {
-                alertas = alertaRepository.findBySectorAndFechaHoraBetween(
-                        sector, startDate, endDate);
-            } else {
-                alertas = alertaRepository.findByFechaHoraBetween(startDate, endDate);
-            }
-
-            // ✅ CALCULAR ESTADÍSTICAS
-            Map<String, Object> stats = new HashMap<>();
-
-            // Total de alertas
-            stats.put("totalAlertas", alertas.size());
-
-            // Alertas por tipo
-            Map<String, Long> porTipo = alertas.stream()
-                    .collect(Collectors.groupingBy(
-                            a -> a.getTipo().name(),
-                            Collectors.counting()
-                    ));
-            stats.put("alertasPorTipo", porTipo);
-
-            // Alertas por estado
-            Map<String, Long> porEstado = alertas.stream()
-                    .collect(Collectors.groupingBy(
-                            a -> a.getEstado().name(),
-                            Collectors.counting()
-                    ));
-            stats.put("alertasPorEstado", porEstado);
-
-            // Alertas por día (últimos 7 días)
-            Map<String, Long> porDia = alertas.stream()
-                    .filter(a -> a.getFechaHora().isAfter(LocalDateTime.now().minusDays(7)))
-                    .collect(Collectors.groupingBy(
-                            a -> a.getFechaHora().toLocalDate().toString(),
-                            Collectors.counting()
-                    ));
-            stats.put("alertasPorDia", porDia);
-
-            // Alertas por sector (top 5)
-            Map<String, Long> porSector = alertas.stream()
-                    .filter(a -> a.getSector() != null)
-                    .collect(Collectors.groupingBy(
-                            Alerta::getSector,
-                            Collectors.counting()
-                    ));
-
-            List<Map<String, Object>> topSectores = porSector.entrySet().stream()
-                    .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
-                    .limit(5)
-                    .map(entry -> {
-                        Map<String, Object> item = new HashMap<>();
-                        item.put("sector", entry.getKey());
-                        item.put("cantidad", entry.getValue());
-                        return item;
-                    })
-                    .collect(Collectors.toList());
-            stats.put("topSectores", topSectores);
-
-            // Alertas por hora del día
-            Map<Integer, Long> porHora = alertas.stream()
-                    .collect(Collectors.groupingBy(
-                            a -> a.getFechaHora().getHour(),
-                            Collectors.counting()
-                    ));
-            stats.put("alertasPorHora", porHora);
-
-            // Porcentaje de alertas silenciosas
-            long silenciosas = alertas.stream()
-                    .filter(Alerta::getSilenciosa)
-                    .count();
-            double porcentajeSilenciosas = alertas.isEmpty() ? 0 :
-                    (silenciosas * 100.0) / alertas.size();
-            stats.put("porcentajeSilenciosas", Math.round(porcentajeSilenciosas * 100.0) / 100.0);
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("stats", stats);
-            response.put("filtros", Map.of(
-                    "villaId", targetVillaId != null ? targetVillaId : "todas",
-                    "sector", sector != null ? sector : "todos",
-                    "fechaInicio", startDate.toString(),
-                    "fechaFin", endDate.toString()
-            ));
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener estadísticas: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
-        }
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String email = auth.getName();
+        DashboardStatsDto dto = alertaService.obtenerDashboardStats(villaId, sector, fechaInicio, fechaFin, email);
+        return ResponseEntity.ok(dto);
     }
 
 // ========== ALERTAS RECIENTES PARA DASHBOARD ==========
@@ -561,39 +288,25 @@ public class AlertaController {
     public ResponseEntity<Map<String, Object>> getAlertasRecientes(
             @RequestParam(defaultValue = "10") int limit) {
 
-        try {
-            Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-            String email = auth.getName();
-            Usuario currentUser = usuarioRepository.findByEmail(email)
-                    .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String email = auth.getName();
+        Usuario currentUser = usuarioRepository.findByEmail(email)
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
 
-            PageRequest pageRequest = PageRequest.of(0, limit, Sort.by("fechaHora").descending());
+        PageRequest pageRequest = PageRequest.of(0, limit, Sort.by(FIELD_FECHA_HORA).descending());
 
-            Page<Alerta> alertasPage;
-            if (currentUser.getRole() == Role.ADMIN_VILLA) {
-                // ADMIN_VILLA solo ve alertas de su villa
-                alertasPage = alertaRepository.findByVillaId(currentUser.getVillaId(), pageRequest);
-            } else {
-                // SUPER_ADMIN ve todas
-                alertasPage = alertaRepository.findAll(pageRequest);
-            }
-
-            List<AlertaResponseDto> alertas = alertasPage.getContent().stream()
-                    .map(AlertaResponseDto::new)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("alertas", alertas);
-            response.put("total", alertasPage.getTotalElements());
-            response.put("status", "success");
-
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", "error");
-            error.put("message", "Error al obtener alertas recientes: " + e.getMessage());
-            return ResponseEntity.internalServerError().body(error);
+        Page<Alerta> alertasPage;
+        if (currentUser.getRole() == Role.ADMIN_VILLA) {
+            alertasPage = alertaRepository.findByVillaId(currentUser.getVillaId(), pageRequest);
+        } else {
+            alertasPage = alertaRepository.findAll(pageRequest);
         }
+
+        List<AlertaResponseDto> alertas = alertaMapper.toDtoList(alertasPage.getContent());
+        Map<String, Object> response = new HashMap<>();
+        response.put(KEY_ALERTAS, alertas);
+        response.put(KEY_TOTAL, alertasPage.getTotalElements());
+        response.put(KEY_STATUS, VALUE_SUCCESS);
+        return ResponseEntity.ok(response);
     }
 }
